# bevy-dbus-demo

./: Cargo.toml  README.md
examples/: container.rs  counter.rs  network_manager_plugin.rs  server.rs
src/: add_proxy.rs  lib.rs  main.rs  mod.rs
